[project]
name = "voice-tool-handler"
version = "0.1.0"
dependencies = [
    "aiomqtt",
    "boto3",
    "openai",
    "requests",
    "pydantic-settings",
    "spotipy"
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project.scripts]
voice-tool-handler = "main:main"

[tool.setuptools]
# Explicitly list all your python file names (without .py)
py-modules = [
    "main",
    "ha_client",
    "tool_handler",
    "config",
    "semantic_router",
    "sanitizer"
]
[tool.setuptools.package-data]
# Include json files for all modules
"*" = ["*.json"]
